<resources>
    <string name="app_name">Viral.in</string>
    <string name="news_thumbnail">News Thumbnail</string>
    <string name="category_thumbnail">category thumbnail</string>
    <string name="home_news_thumbnail">Home news thumbnail</string>
    <string name="long_text_replacement">%s ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="image_status">Image Status</string>
    <string name="view_full_news">view full news</string>
    <string name="viral_in">VIRAL.IN</string>
</resources>